implemented resettings slider labels to locale default in settings, partial for #126

--- a/admin/css/admin-settings.less
+++ b/admin/css/admin-settings.less
@@ -51,4 +51,15 @@
             margin: 0;
         }
     }
+
+    .fontsampler-admin-feature-label-reset {
+        border-width: 2px;
+        color: @fs_color_medium;
+        cursor: pointer;
+
+        &:hover, &:focus {
+            border-color: @fs_color_warning;
+            color: @fs_color_warning;    
+        }
+    }
 }
