--- a/includes/partials/options-features.twig
+++ b/includes/partials/options-features.twig
@@ -11,7 +11,6 @@
         </label>
         {% include 'partials/button-details.twig' %}
         <div class="fontsampler-options-features-details {% if not set.use_defaults and set[label] is empty and not settings %} fontsampler-options-unchecked {% endif %}">
-
             {{ include('partials/options-features-label.twig', {
                 use_default: set[f.name ~ '_label'] is empty,
                 label: label,
@@ -19,7 +18,8 @@
                 description: f.slider_label,
                 default: (defaults[f.name ~ '_label']),
                 value: set[label ~ '_label'],
-                set_uses_defaults: set.use_defaults
+                set_uses_defaults: set.use_defaults,
+                label_installation_default: f.label_installation_default
             }) }}
 
             {{ include('partials/options-features-slider.twig', {
