tiny copy update

--- a/includes/fontsets.twig
+++ b/includes/fontsets.twig
@@ -11,7 +11,7 @@
 
 {% else %}
 
-	<p>Listed here are the fonts and the file formats that are provided for displaying them.</p>
+	<p>Listed here are the fonts and the file formats that are provided for displaying them in Fontsamplers. You can use the same fonts in several Fontsamplers, and also edit here what is the displayed font name and associated webfont formats.</p>
 
 	{% include 'pagination.twig' %}
 
