--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -11,6 +11,8 @@
 @import "admin-header.less"; 
 @import "admin-footer.less";
 
+@import "admin-rtl.less";
+
 /*
  * Scope all css to be contained only within the fontsampler wrapper
  */
