--- a/admin/css/admin-buttons.less
+++ b/admin/css/admin-buttons.less
@@ -114,7 +114,7 @@
 
         background: @fs_color_add_light;
         border: 3px solid @fs_color_medium;
-        border-left: 0;
+        border-left-width: 0;
         border-radius: 0 5px 5px 0;
         color: @fs_color_text;
         font-weight: bold;
