--- a/css/fontsampler-css.less
+++ b/css/fontsampler-css.less
@@ -68,6 +68,10 @@
             float: left;
             line-height: 1.2;
 
+            .rtl & {
+                float: right;
+            }
+
             &.fontsampler-ui-block-fontsampler {
                 height: auto;
                 width: 100%;
@@ -80,6 +84,10 @@
             float: left;
             padding-right: 5px;
             height: 100%;
+
+            .rtl & {
+                float: right;
+            }
 
             &.one-item {
                 width: 30px;
@@ -108,6 +116,7 @@
                 font-size: inherit;
                 font-family: inherit;
                 color: #333;
+                cursor: pointer;
                 font-weight: inherit;
                 height: 100%;
                 line-height: 4px;
@@ -145,20 +154,19 @@
             height: 100%;
             width: 100%;
 
+            .fontsampler-slider-header {
+                display: flex;
+                justify-content: space-between;
+            }
+
             // the label above the slider
             .slider-label {
-                padding-right: 3em;
-                width: 100%;
-                display: block;
                 height: 90%;
                 overflow: hidden;
             }
 
             // the value above the slider
             .slider-value {
-                position: absolute;
-                right: 5px;
-                top: 0;
                 text-align: right;
             }
         }
