--- a/includes/partials/slider.twig
+++ b/includes/partials/slider.twig
@@ -5,10 +5,12 @@
                    value="{{ value }}"
                    type="text"
                    {#data-validation="number"#}
-                   {#data-validation-allowing="range[1;256]"#}>
+                   {#data-validation-allowing="range[1;256]"#}
+                   >
 		</span>
     <div class="slider">
         {# Note that the min and max attributes are necessary to restrain the value #}
-        <input type="range" data-group="{{ group }}" name="{{ name }}" value="{{ value }}" min="{{ min }}" max="{{ max }}">
+        <input type="range" data-group="{{ group }}" name="{{ name }}" value="{{ value }}" 
+            min="{{ min }}" max="{{ max }}" {% if is_rtl == 1%} data-direction="rtl" {% endif %}>
     </div>
 </label>
