--- a/includes/partials/options-features-link.twig
+++ b/includes/partials/options-features-link.twig
@@ -5,14 +5,15 @@
 {% block custom %}
     <label>
         <input type="radio" name="{{ name }}_type" value="label"
-            {% if type == 'label' and label is not empty %} checked="checked" {% endif %}
+            {% if type == 'label' and label is not empty %} checked="checked" {% endif %}>
         <span class="settings-description">Use text label for "{{ name }}" link:</span><br>
-        <input type="text" name="{{ name }}_label" value="{{ label }}"/>
+        <input type="text" name="{{ name }}_label" value="{{ label }}" >
     </label>
     <br>
     <label class="fontsampler-setting-image">
         <input type="radio" name="{{ name }}_type" value="image"
-            {% if type == 'image' and image is not empty %} checked="checked" {% endif %}>
+            {% if type == 'image' and image is not empty %} checked="checked" {% endif %}
+        >
         <span class="settings-description">Use image for the "Buy" link:</span><br>
         {{ include ('partials/media-upload.twig', {
             'image_id' : image,
@@ -32,7 +33,7 @@
                 <span class="settings-description">Use default label for "{{ name }}" link:</span><br>
                 <span class="fontsampler-default-value">{{ default_label }}</span>
                 <input type="hidden" name="{{ name }}_label_default" class="fontsampler-admin-slider-label"
-                       value="{{ default_label }}"/>
+                       value="{{ default_label }}" >
             </label>
         {% else %}
             <label class="fontsampler-label-disabled">
@@ -46,7 +47,9 @@
                 <input type="radio" name="{{ name }}_type" value="image_default"
                     {% if type == 'image' and image is empty %} checked="checked" {% endif %}>
                 <span class="settings-description">Use default image for the "{{ name }}" link:</span><br>
-                <span class="custom-image-container"><img src="{{ wp_get_attachment_image_src( default_image ) }}"></span>
+                <span class="custom-image-container">
+                    <img src="{{ wp_get_attachment_image_src( default_image ) }}">
+                </span>
                 <br>
                 <small>Recommended size about 200 x 60 pixels</small>
             </label>
