misc additional admin area RTL fixes for #73

--- a/admin/css/admin-rtl.less
+++ b/admin/css/admin-rtl.less
@@ -18,5 +18,18 @@ body.rtl {
             border-left-width: 3px !important;
             border-right-width: 0;
         }
+
+        .fontsampler-settings-reset {
+            float: left;
+        }
+
+        footer li {
+            float: right;
+        }
+
+        .fontsampler-options.default-text-alignment > div label {
+            margin-right: 0;
+            margin-left: 2em;
+        }
     }    
 }
