--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -280,12 +280,13 @@
 
     .fontsampler-admin-column-wrapper {
         clear: both;
+        display: flex;
+        justify-content: space-between;
         overflow: auto;
+        width: 100%;
     }
 
     .fontsampler-admin-column-half {
-        float: left;
-        margin-right: 5%;
         width: 45%;
     }
 
