--- a/admin/css/admin-options.less
+++ b/admin/css/admin-options.less
@@ -118,6 +118,8 @@
     .fontsampler-options-row {
         clear: both;
         overflow: auto;
+        display: flex;
+        justify-content: space-between;
 
         // every second row with background
         &:nth-of-type(2n + 1) {
@@ -137,14 +139,17 @@
         }
 
         & > strong {
+            box-sizing: border-box;
             padding: 0.75em 1em;
-            width: 20%;
+            flex-basis: 20%;
+            flex-shrink: 0;
         }
 
         & > div {
             box-sizing: border-box;
             padding: 0.5em;
-            width: 39%;
+            flex-basis: 40%;
+            flex-shrink: 1;
 
             &:nth-of-type(1) {
                 border-left: 5px solid @fs_color_white;
