final piece for #73, customizable default dropdown text for selecting sample texts & corresponding language defaults

--- a/includes/partials/options-features.twig
+++ b/includes/partials/options-features.twig
@@ -83,6 +83,7 @@
             {% include 'partials/button-details.twig' %}
             <div class="fontsampler-options-features-details">
                 {{ include( 'partials/options-features-sampletexts.twig') }}
+                {{ include( 'partials/options-features-sampletexts-default.twig' )}}
             </div>
         {% endif %}
 
