--- a/includes/partials/options-features-sampletexts.twig
+++ b/includes/partials/options-features-sampletexts.twig
@@ -4,8 +4,8 @@
 
 {% block custom %}
     <label class="fontsampler-radio">
-        <input type="radio" name="sampletexts_use_default" value="0"
-            {% if set['sample_texts'] is not empty %} checked="checked" {% endif %}>
+        {% if not settings %}<input type="radio" name="sampletexts_use_default" value="0"
+            {% if set['sample_texts'] is not empty %} checked="checked" {% endif %}>{% endif %}
         <span class="settings-description">Sample texts
         <small>(use simple line breaks for each option to be displayed in the dropdown)</small></span>
         <textarea name="sample_texts" class="fontsampler-sample_texts">{{ set['sample_texts'] }}</textarea>
