--- a/includes/partials/options-features-sampletexts-default.twig
+++ b/includes/partials/options-features-sampletexts-default.twig
@@ -1,6 +1,6 @@
 {% extends 'partials/options-row.twig' %}
 
-{% block label %}Sample texts dropdown{% endblock %}
+{% block label %}Sample dropdown default{% endblock %}
 
 {% block custom %}
     {% if not settings %}
