--- a/includes/partials/options-features.twig
+++ b/includes/partials/options-features.twig
@@ -83,14 +83,15 @@
             {% include 'partials/button-details.twig' %}
             <div class="fontsampler-options-features-details">
                 {% include 'partials/options-features-locl.twig' %}
+                {% include 'partials/options-features-locl-default.twig' %}
             </div>
         {% endif %}
 
         {% if label == 'sampletexts' %}
             {% include 'partials/button-details.twig' %}
             <div class="fontsampler-options-features-details">
-                {{ include( 'partials/options-features-sampletexts.twig') }}
-                {{ include( 'partials/options-features-sampletexts-default.twig' )}}
+                {% include 'partials/options-features-sampletexts.twig' %}
+                {% include 'partials/options-features-sampletexts-default.twig' %}
             </div>
         {% endif %}
 
