--- a/includes/about.twig
+++ b/includes/about.twig
@@ -22,6 +22,10 @@
         <li><a href="http://www.phitradesign-fonts.com/">Philip Trautmann</a></li>
         <li><a href="https://brandingwithtype.com/typefaces/modelica">Alberto Romanos</a></li>
     </ul>
+    <p>For help with translating the plugin (language) my thanks goes to:</p>
+    <ul class="real-list">
+        <li><a href="https://shahabsiavash.com/">Si47ash</a> (Persian)</li>
+    </ul>
     <p>For code contributions to the repository my thanks to:</p>
     <ul class="real-list">
         <li><a href="https://drawcard.com.au/">Chris Drabsch</a></li>
