basic frontend check to determine glyph availability, missing UI and backend still for #123

--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -484,4 +484,13 @@
     .fontsampler-list-font-link {
         cursor: pointer;
     }
+
+    .ui-sortable-handle {
+        cursor: grab;
+        padding: 5px 10px;
+    }
+
+    .ui-sortable-helper {
+        background: @fs_color_ok_light;
+    }
 }
