added dutch translations

--- a/includes/about.twig
+++ b/includes/about.twig
@@ -25,6 +25,7 @@
     <p>For help with translating the plugin (language) my thanks goes to:</p>
     <ul class="real-list">
         <li><a href="https://shahabsiavash.com/">Si47ash</a> (Persian)</li>
+        <li><a href="https://typemafia.com/">Gerben Dollen</a> (Dutch)</li>
     </ul>
     <p>For code contributions to the repository my thanks to:</p>
     <ul class="real-list">
