--- a/admin/css/admin-buttons.less
+++ b/admin/css/admin-buttons.less
@@ -94,7 +94,23 @@
         &.delete {
             .button-delete();
         }
+
+        &.wp-color-result {
+            padding: 0 0 0 30px;
+            border: 1px solid @fs_color_medium;
+            border-radius: 3px;
+        }
     }
+
+    .wp-picker-input-wrap {
+        display: inline-block;
+
+        label {
+            display: inline-block !important;
+            margin: 0 1em !important; 
+        }
+    }
+    
 
     table + .button {
         margin-top: 1em !important;
@@ -102,10 +118,17 @@
 
     .wp-picker-default {
         background: lightgrey;
-        top: -0.1em;
         position: relative;
         height: 2em;
         line-height: 1em !important;
+        opacity: 0.5;
+        transition: opacity 0.2s ease-out;
+        pointer-events: none;
+    }
+
+    .wp-picker-container.wp-picker-active .wp-picker-default {
+        opacity: 1;
+        pointer-events: all;
     }
 
     .fontsampler-copy-clipboard {
