implements #123 with four options, but not end user feedback

--- a/css/fontsampler-css.css
+++ b/css/fontsampler-css.css
@@ -678,3 +678,6 @@
 .fontsampler-interface .selectric > .button {
   color: #333;
 }
+.fontsampler-interface .fontsampler-glyph-highlight {
+  color: #dedede;
+}
