--- a/css/fontsampler-interface.less
+++ b/css/fontsampler-interface.less
@@ -2,6 +2,7 @@
 @css_color_text: #333;
 @css_color_background: #fff;
 @css_color_label: #333;
+@css_color_glyph_highlight: #dedede;
 @css_value_size_label: inherit;
 @css_value_fontfamily_label: inherit;
 @css_value_lineheight_label: normal;
@@ -128,4 +129,8 @@
 .fontsampler-interface .icon-invert-white,
 .fontsampler-interface .selectric > .button {
     color: @css_color_label;
+}
+
+.fontsampler-interface .fontsampler-glyph-highlight {
+    color: @css_color_glyph_highlight;
 }
