--- a/admin/css/admin-header.less
+++ b/admin/css/admin-header.less
@@ -3,7 +3,7 @@
 #fontsampler-admin {
     header {
         background: white;
-        margin: 0 1.5em 0 0;
+        margin: 1.5em 1.5em 0 0;
         padding: 1em 1em;
     }
 
