--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -26,15 +26,14 @@
         padding: 1em 2em;
     }
 
+    .notice {
+        margin: 1em 0;
+    }
+
     fieldset label, label.fontsampler-admin-label-block {
         display: block;
         color: @fs_color_text_medium;
         margin: 0.5em 0;
-
-        &:hover, &:focus {
-            input, select {
-            }
-        }
     }
 
     .submit {
@@ -161,14 +160,6 @@
         margin-bottom: 0.5em;
     }
 
-    // block at the top for displaying messages
-    .notice {
-        border: 1px solid #eee;
-        padding: 1em;
-        margin: 0 1.5em 2em 0;
-        box-shadow: none;
-    }
-
     code {
         border: 3px solid @fs_color_medium;
         font-family: monospace;
@@ -210,28 +201,6 @@
     td .fileformat {
         display: inline-block;
         width: 4em;
-    }
-
-    label {
-        span.input-description {
-        }
-
-        span.input-description + input[type="text"] {
-        }
-    }
-
-    // different default type of messages in a <strong>
-    .info, .note, .error {
-        display: block;
-    }
-    .info {
-        color: @fs_color_ok;
-    }
-    .note {
-        color: @fs_color_warning;
-    }
-    .error {
-        color: @fs_color_delete;
     }
 
     .fontsampler-num-notifications {
@@ -331,8 +300,6 @@
     &.fontsampler-admin-hide-legacy-formats {
         .fontsampler-admin-legacy-format {
             display: none;
-        }
-        .fontsampler-admin-format {
         }
     }
 
