fontset inline edit small style tweak

--- a/includes/partials/font-row.twig
+++ b/includes/partials/font-row.twig
@@ -1,4 +1,4 @@
-<span class="fontsampler-fontset-sort-handle">&varr;</span>
+<span class="fontsampler-fontset-sort-handle ui-sortable-handle">&varr;</span>
 <select name="font_id[]">
     <option value="0">-pick from existing-</option>
     {#for each dropdown loop print out all fonts and if the current font is in the set, select it#}
