--- a/includes/set-edit.twig
+++ b/includes/set-edit.twig
@@ -69,7 +69,7 @@
 		</li>
 		<li id="fontsampler-fontset-inline-placeholder" class="fontsampler-fontset-inline">
 			<input class="inline_font_id" value="" type="hidden">
-			<span class="fontsampler-fontset-sort-handle">&varr;</span>
+			<span class="fontsampler-fontset-sort-handle  ui-sortable-handle">&varr;</span>
 
 			<div class="fontsampler-fontset-inline-wrapper">
 				{% include 'fontset-fonts.twig' %}
