--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -461,3 +461,19 @@
         background: @fs_color_ok_light;
     }
 }
+
+
+.fontsampler-changelog-fix strong {
+    color: @fs_color_warning;
+}
+
+.fontsampler-changelog-tweak strong {
+    color: @fs_color_add;
+}
+
+.fontsampler-changelog-feature strong {
+    color: @fs_color_ok;
+}
+.fontsampler-changelog-notice strong {
+    color: @fs_color_delete;
+}
