--- a/includes/footer.twig
+++ b/includes/footer.twig
@@ -1,9 +1,25 @@
-<strong>Fontsampler is brought to you by <a href="http://johannesneumeier.com">Johannes Neumeier</a>
-with support from:
-</strong>
-<ul>
-	<li><a href="https://paulogoode.com"><img src="{{ plugin_dir_url }}/supporter-logos/paulo-goode-logo.png"></a></li>
-	<li><a href="http://quadrat.com"><img src="{{ plugin_dir_url }}/supporter-logos/quadrat-logo.png"></a></li>
-	<li><img src="{{ plugin_dir_url }}/supporter-logos/liberty-type-logo.png"></li>
-	<li><a href="http://dunwichtype.com/"><img src="{{ plugin_dir_url }}/supporter-logos/james-puckett-logo.png"></a></li>
-</ul>
+<div class="fontsampler-logos">
+	<div class="fontsampler-supporters">
+		<strong>Fontsampler is brought to you with support from:</strong>
+		<ul>
+			<li><a href="https://paulogoode.com"><img src="{{ plugin_dir_url }}/supporter-logos/paulo-goode-logo.png" alt="Paulo Goode"></a></li>
+			<li><a href="http://quadrat.com"><img src="{{ plugin_dir_url }}/supporter-logos/quadrat-logo.png" alt="Quadrat"></a></li>
+			<li><img src="{{ plugin_dir_url }}/supporter-logos/liberty-type-logo.png" alt="Liberty Type"></li>
+			<li><a href="http://dunwichtype.com/"><img src="{{ plugin_dir_url }}/supporter-logos/james-puckett-logo.png" alt="Dunwich Type"></a></li>
+		</ul>
+	</div>
+	<div class="fontsampler-creators">
+		<strong>Made by <a href="http://johannesneumeier.com">Johannes Neumeier</a>:</strong>
+		<a href="https://underscoretype.com"><img src="{{ plugin_dir_url }}/supporter-logos/underscore-type-logo.png" alt="Underscore Type"></a>
+	</div>
+</div>
+
+<div class="fontsampler-donate">
+	Enjoy using Fontsampler? Consider making a small Paypal donation to show your support:
+	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		<input name="cmd" value="_s-xclick" type="hidden">
+		<input name="hosted_button_id" value="LSK5YQHHCGGYS" type="hidden">
+		<input src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" name="submit" alt="PayPal - The safer, easier way to pay online!" type="image" border="0">
+		<img alt="" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" height="1" width="1" border="0">
+	</form>
+</div>
