small fix to display language locl picker without options

--- a/admin/css/admin-options.less
+++ b/admin/css/admin-options.less
@@ -156,6 +156,12 @@
                 border-right: 3px solid @fs_color_white;
             }
 
+            .settings-description small code {
+                padding: 0.5em !important;
+                white-space: nowrap;
+                line-height: 2em;
+            }
+
             .settings-description + input[type=text] {
                 margin-left: 1.75em;
                 margin-bottom: 0.5em;
@@ -230,21 +236,6 @@
     .slider {
         margin: 0.5em 0;
     }
-    //.rangeslider--horizontal {
-    //    background: @fs_color_ok_light;
-    //    height: 4px;
-    //    width: 100%;
-    //    clear: both;
-    //
-    //    .rangeslider__fill {
-    //        background: @fs_color_ok;
-    //    }
-    //
-    //    .rangeslider__handle {
-    //        height: 12px;
-    //        width: 12px;
-    //    }
-    //}
 
     // the wrapper element for inline uploads, like for the buy and specimen link images
     .fontsampler-setting-image {
