small fix to notdef settings row css

--- a/admin/css/admin-options.less
+++ b/admin/css/admin-options.less
@@ -126,6 +126,10 @@
             background: @fs_color_light;
         }
 
+        &:nth-of-type(2n) {
+            background: @fs_color_white;
+        }
+
         // all children in one row: label, settings, default
         & > * {
             box-sizing: border-box;
