--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -261,6 +261,8 @@
 
     .selectric .button {
         border: none;
+        display: block;
+        position: absolute;
     }
 
     #fontsampler-fontset-from {
