--- a/admin/css/admin-settings.less
+++ b/admin/css/admin-settings.less
@@ -1,3 +1,4 @@
+@import "admin-variables.less";
 
 #fontsampler-admin {
     .form-settings {
@@ -54,7 +55,7 @@
 
     .fontsampler-admin-feature-label-reset {
         border-width: 2px;
-        color: @fs_color_medium;
+        color: @fs_color_warning;
         cursor: pointer;
 
         &:hover, &:focus {
